--- a/Tactics/Tactics/Base.lproj/Main.storyboard
+++ b/Tactics/Tactics/Base.lproj/Main.storyboard
@@ -691,11 +691,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Tactics" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="704" height="522"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fK3-D4-XGT">
-                                <rect key="frame" x="190" y="85" width="100" height="100"/>
+                                <rect key="frame" x="302" y="211" width="100" height="100"/>
                                 <subviews>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mgg-sh-OKS">
                                         <rect key="frame" x="4" y="63" width="92" height="31"/>
@@ -711,7 +711,7 @@
                                             <action selector="btn1Pressed:" target="XfG-lQ-9wD" id="BBK-TL-G3Z"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7kT-jZ-jHO">
+                                    <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7kT-jZ-jHO">
                                         <rect key="frame" x="4" y="33" width="92" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="2CC-1p-YfV"/>
@@ -725,7 +725,7 @@
                                             <action selector="btn2Pressed:" target="XfG-lQ-9wD" id="pc1-D3-Wur"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WMV-0v-TDp">
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="WMV-0v-TDp">
                                         <rect key="frame" x="4" y="3" width="92" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="Cxk-9x-fM8"/>
@@ -768,9 +768,20 @@
                                 </customSpacing>
                             </stackView>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a9b-mL-iIV">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="D75-wx-hlW"/>
+                                <rect key="frame" x="0.0" y="0.0" width="704" height="522"/>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="testHexBoard" id="D75-wx-hlW"/>
                             </imageView>
+                            <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OX8-RM-y5F">
+                                <rect key="frame" x="328" y="237" width="48" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="blue" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="22A-3Y-Hwm">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="blueSwordsmanClicked:" target="XfG-lQ-9wD" id="iVP-1h-rAF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="a9b-mL-iIV" secondAttribute="bottom" id="Bbf-Gy-HEf"/>
@@ -783,6 +794,7 @@
                     </view>
                     <connections>
                         <outlet property="background" destination="a9b-mL-iIV" id="hud-tq-I3E"/>
+                        <outlet property="blueSwordsman" destination="OX8-RM-y5F" id="qjL-ZB-cJg"/>
                         <outlet property="btn1" destination="Mgg-sh-OKS" id="51c-ah-apH"/>
                         <outlet property="btn2" destination="7kT-jZ-jHO" id="xPs-s2-61U"/>
                         <outlet property="btn3" destination="WMV-0v-TDp" id="6e0-oJ-oSS"/>
@@ -794,4 +806,8 @@
             <point key="canvasLocation" x="75" y="655"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="blue" width="113" height="113"/>
+        <image name="testHexBoard" width="704" height="522"/>
+    </resources>
 </document>
