--- a/Tactics/Tactics/Base.lproj/Main.storyboard
+++ b/Tactics/Tactics/Base.lproj/Main.storyboard
@@ -1,10 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13771"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
-        <capability name="stacking Non-gravity area distributions on NSStackView" minToolsVersion="7.0" minSystemVersion="10.11"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -17,7 +14,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Tactics" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About Tactics" id="5kV-Vb-QxS">
+                                        <menuItem title="About GameTemplate" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
@@ -26,7 +23,12 @@
                                         <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
                                         <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW"/>
                                         <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
-                                        <menuItem title="Hide Tactics" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Services" id="NMo-om-nkz">
+                                            <modifierMask key="keyEquivalentModifierMask"/>
+                                            <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
+                                        </menuItem>
+                                        <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
+                                        <menuItem title="Hide GameTemplate" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -44,7 +46,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit Tactics" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit GameTemplate" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -98,6 +100,18 @@
                                         <menuItem title="Revert to Saved" keyEquivalent="r" id="KaW-ft-85H">
                                             <connections>
                                                 <action selector="revertDocumentToSaved:" target="Ady-hI-5gd" id="iJ3-Pv-kwq"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem isSeparatorItem="YES" id="aJh-i4-bef"/>
+                                        <menuItem title="Page Setup…" keyEquivalent="P" id="qIS-W8-SiK">
+                                            <modifierMask key="keyEquivalentModifierMask" shift="YES" command="YES"/>
+                                            <connections>
+                                                <action selector="runPageLayout:" target="Ady-hI-5gd" id="Din-rz-gC5"/>
+                                            </connections>
+                                        </menuItem>
+                                        <menuItem title="Print…" keyEquivalent="p" id="aTl-1u-JFS">
+                                            <connections>
+                                                <action selector="print:" target="Ady-hI-5gd" id="qaZ-4w-aoO"/>
                                             </connections>
                                         </menuItem>
                                     </items>
@@ -645,7 +659,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="Tactics Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="GameTemplate Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
                                                 <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
@@ -659,7 +673,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Tactics" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -669,12 +683,12 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Tactics" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                    <window key="window" title="Tactics" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <connections>
+			<connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
                     </window>
@@ -689,125 +703,18 @@
         <!--View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Tactics" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="704" height="522"/>
+                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target"  sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <stackView distribution="fill" orientation="vertical" alignment="leading" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fK3-D4-XGT">
-                                <rect key="frame" x="302" y="211" width="100" height="100"/>
-                                <subviews>
-                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mgg-sh-OKS">
-                                        <rect key="frame" x="4" y="63" width="92" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="80" id="1td-Cc-eT0"/>
-                                            <constraint firstAttribute="height" constant="20" id="Q4X-6E-loM"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="igc-E2-lfS">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="btn1Pressed:" target="XfG-lQ-9wD" id="BBK-TL-G3Z"/>
-                                        </connections>
-                                    </button>
-                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="7kT-jZ-jHO">
-                                        <rect key="frame" x="4" y="33" width="92" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="2CC-1p-YfV"/>
-                                            <constraint firstAttribute="width" constant="80" id="ZFE-TR-xQf"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Fos-uf-nL7">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="btn2Pressed:" target="XfG-lQ-9wD" id="pc1-D3-Wur"/>
-                                        </connections>
-                                    </button>
-                                    <button verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WMV-0v-TDp">
-                                        <rect key="frame" x="4" y="3" width="92" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="80" id="Cxk-9x-fM8"/>
-                                            <constraint firstAttribute="height" constant="20" id="Yse-kL-XeS"/>
-                                        </constraints>
-                                        <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Gga-F2-tJ9">
-                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                            <font key="font" metaFont="system"/>
-                                        </buttonCell>
-                                        <connections>
-                                            <action selector="btn3Pressed:" target="XfG-lQ-9wD" id="pXC-hH-9U1"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="WMV-0v-TDp" firstAttribute="leading" secondItem="fK3-D4-XGT" secondAttribute="leading" constant="10" id="5j4-as-ZbL"/>
-                                    <constraint firstItem="Mgg-sh-OKS" firstAttribute="centerX" secondItem="fK3-D4-XGT" secondAttribute="centerX" id="B90-sh-qZu"/>
-                                    <constraint firstItem="7kT-jZ-jHO" firstAttribute="centerX" secondItem="fK3-D4-XGT" secondAttribute="centerX" id="DUN-qq-TPX"/>
-                                    <constraint firstItem="WMV-0v-TDp" firstAttribute="centerX" secondItem="fK3-D4-XGT" secondAttribute="centerX" id="IEH-32-iIy"/>
-                                    <constraint firstItem="Mgg-sh-OKS" firstAttribute="top" secondItem="fK3-D4-XGT" secondAttribute="top" constant="10" id="MN7-8W-x8c"/>
-                                    <constraint firstAttribute="trailing" secondItem="Mgg-sh-OKS" secondAttribute="trailing" constant="10" id="MY0-uj-0Nx"/>
-                                    <constraint firstItem="Mgg-sh-OKS" firstAttribute="leading" secondItem="fK3-D4-XGT" secondAttribute="leading" constant="10" id="P6f-I8-UEx"/>
-                                    <constraint firstAttribute="trailing" secondItem="WMV-0v-TDp" secondAttribute="trailing" constant="10" id="Wv7-rW-Iv4"/>
-                                    <constraint firstItem="7kT-jZ-jHO" firstAttribute="leading" secondItem="fK3-D4-XGT" secondAttribute="leading" constant="10" id="bKh-8N-WVH"/>
-                                    <constraint firstAttribute="height" constant="100" id="inA-Cf-8Pi"/>
-                                    <constraint firstAttribute="width" constant="100" id="mWr-p0-2AR"/>
-                                    <constraint firstAttribute="trailing" secondItem="7kT-jZ-jHO" secondAttribute="trailing" constant="10" id="wXQ-0Y-DWt"/>
-                                    <constraint firstItem="7kT-jZ-jHO" firstAttribute="centerY" secondItem="fK3-D4-XGT" secondAttribute="centerY" id="yPX-nP-zQl"/>
-                                    <constraint firstAttribute="bottom" secondItem="WMV-0v-TDp" secondAttribute="bottom" constant="10" id="yur-FU-fm8"/>
-                                </constraints>
-                                <visibilityPriorities>
-                                    <integer value="1000"/>
-                                    <integer value="1000"/>
-                                    <integer value="1000"/>
-                                </visibilityPriorities>
-                                <customSpacing>
-                                    <real value="3.4028234663852886e+38"/>
-                                    <real value="3.4028234663852886e+38"/>
-                                    <real value="3.4028234663852886e+38"/>
-                                </customSpacing>
-                            </stackView>
-                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a9b-mL-iIV">
-                                <rect key="frame" x="0.0" y="0.0" width="704" height="522"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="testHexBoard" id="D75-wx-hlW"/>
-                            </imageView>
-                            <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OX8-RM-y5F">
-                                <rect key="frame" x="328" y="237" width="48" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="blue" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="22A-3Y-Hwm">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="blueSwordsmanClicked:" target="XfG-lQ-9wD" id="iVP-1h-rAF"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="a9b-mL-iIV" secondAttribute="bottom" id="Bbf-Gy-HEf"/>
-                            <constraint firstItem="a9b-mL-iIV" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="CXM-PB-dOf"/>
-                            <constraint firstItem="a9b-mL-iIV" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="IcG-tu-qis"/>
-                            <constraint firstItem="fK3-D4-XGT" firstAttribute="centerY" secondItem="m2S-Jp-Qdl" secondAttribute="centerY" id="otU-7M-TeE"/>
-                            <constraint firstItem="fK3-D4-XGT" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="sQa-H3-rQ3"/>
-                            <constraint firstAttribute="trailing" secondItem="a9b-mL-iIV" secondAttribute="trailing" id="sek-pf-mP1"/>
-                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="background" destination="a9b-mL-iIV" id="hud-tq-I3E"/>
-                        <outlet property="blueSwordsman" destination="OX8-RM-y5F" id="qjL-ZB-cJg"/>
-                        <outlet property="btn1" destination="Mgg-sh-OKS" id="51c-ah-apH"/>
-                        <outlet property="btn2" destination="7kT-jZ-jHO" id="xPs-s2-61U"/>
-                        <outlet property="btn3" destination="WMV-0v-TDp" id="6e0-oJ-oSS"/>
-                        <outlet property="menuButtonsView" destination="fK3-D4-XGT" id="ZcK-Op-MTg"/>
+                        <outlet property="skView" destination="m2S-Jp-Qdl" id="qux-te-cT3"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="75" y="817"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="blue" width="113" height="113"/>
-        <image name="testHexBoard" width="704" height="522"/>
-    </resources>
 </document>
